[tool.poetry]
name = "geoml"
version = "0.1.8"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
geopandas = ">=0.10.2"
GeoAlchemy2 = "^0.12.1"
keyring = "^23.6.0"
pip = "^22.1.2"
pygeos = "^0.12.0"
Rtree = "^1.0.0"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
db = { git = "ssh://git@github.com/SenteraLLC/db-geoml.git", branch = "main"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
sure = "^2.0"
flake8 = "^4.0"
pytest = "^7.1"
black = {version = "^22.6", allow-prereleases = true}
ipywidgets = "^7.7"
ipykernel = "^6.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
