[tool.poetry]
name = "geoml"
version = "1.0.4"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10.4"
GeoAlchemy2 = "^0.12.1"
geopandas = "^0.12.2"
keyring = "^23.6.0"
pip = "^22.1.2"
pyproj = "3.4.1"
Rtree = "^1.0.0"
scikit-learn = "^1.1.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
sure = "^2.0"
flake8 = "^4.0"
pytest = "^7.1"
black = {version = "^22.6", allow-prereleases = true}
ipywidgets = "^7.7"
ipykernel = "^6.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
